@@ -1,7 +1,8 @@
 package com.cta4j.bus.pattern;
 
+import com.cta4j.bus.common.exception.Cta4jBusException;
+import com.cta4j.bus.common.internal.util.BusApiConstants;
 import com.cta4j.bus.pattern.model.RoutePattern;
-import com.cta4j.exception.Cta4jException;
 import org.jspecify.annotations.NullMarked;
 
 import java.util.Collection;
@@ -23,6 +24,8 @@ public interface PatternsApi {
      * @return a {@link List} of {@link RoutePattern}s corresponding to the provided IDs, or an empty {@link List} if
      * no patterns are found
      * @throws NullPointerException if {@code patternIds} is {@code null} or contains {@code null} elements
+     * @throws IllegalArgumentException if more than 10 pattern IDs are provided
+     * @throws Cta4jBusException if the API returns an error response or the response cannot be parsed
      */
     List<RoutePattern> findByIds(Collection<String> patternIds);
 
@@ -31,8 +34,10 @@ public interface PatternsApi {
      *
      * @param patternId the route pattern ID
      * @return an {@link Optional} containing the {@link RoutePattern} if found, or an empty {@link Optional} if no
-     * pattern exists with the given ID
+     * pattern is found for the given ID
      * @throws NullPointerException if {@code patternId} is {@code null}
+     * @throws Cta4jBusException if multiple route patterns are found for the given ID, or if the API returns an error
+     * response or the response cannot be parsed
      */
     default Optional<RoutePattern> findById(String patternId) {
         Objects.requireNonNull(patternId);
@@ -46,9 +51,9 @@ public interface PatternsApi {
         }
 
         if (patterns.size() > 1) {
-            String message = String.format("Multiple route patterns found for ID: %s", patternId);
+            String message = "Multiple route patterns found for ID: %s".formatted(patternId);
 
-            throw new Cta4jException(message);
+            throw new Cta4jBusException(message, BusApiConstants.PATTERNS_ENDPOINT);
         }
 
         RoutePattern pattern = patterns.getFirst();
@@ -61,8 +66,9 @@ public interface PatternsApi {
      *
      * @param routeId the route ID
      * @return a {@link List} of {@link RoutePattern}s associated with the route ID, or an empty {@link List} if no
-     * patterns exist for the route ID
+     * patterns are found for the route ID
      * @throws NullPointerException if {@code routeId} is {@code null}
+     * @throws Cta4jBusException if the API returns an error response or the response cannot be parsed
      */
     List<RoutePattern> findByRouteId(String routeId);
 }
