@@ -1,7 +1,8 @@
 package com.cta4j.bus.stop;
 
+import com.cta4j.bus.common.exception.Cta4jBusException;
+import com.cta4j.bus.common.internal.util.BusApiConstants;
 import com.cta4j.bus.stop.model.Stop;
-import com.cta4j.exception.Cta4jException;
 import org.jspecify.annotations.NullMarked;
 
 import java.util.Collection;
@@ -24,6 +25,7 @@ public interface StopsApi {
      * @return a {@link List} of {@link Stop}s corresponding to the provided route ID and direction, or an empty
      * {@link List} if no stops are found
      * @throws NullPointerException if {@code routeId} or {@code direction} is {@code null}
+     * @throws Cta4jBusException if the API returns an error response or the response cannot be parsed
      */
     List<Stop> findByRouteIdAndDirection(String routeId, String direction);
 
@@ -34,6 +36,8 @@ public interface StopsApi {
      * @return a {@link List} of {@link Stop}s corresponding to the provided stop IDs, or an empty {@link List} if no
      * stops are found
      * @throws NullPointerException if {@code stopIds} is {@code null} or contains {@code null} elements
+     * @throws IllegalArgumentException if more than 10 stop IDs are provided
+     * @throws Cta4jBusException if the API returns an error response or the response cannot be parsed
      */
     List<Stop> findByIds(Collection<String> stopIds);
 
@@ -41,10 +45,11 @@ public interface StopsApi {
      * Retrieves a stop by its ID.
      *
      * @param stopId the stop ID
-     * @return an {@link Optional} containing the {@link Stop} if found, or an empty {@link Optional} if no stop exists
-     * with the given ID
+     * @return an {@link Optional} containing the {@link Stop} if found, or an empty {@link Optional} if no stop is
+     * found for the given ID
      * @throws NullPointerException if {@code stopId} is {@code null}
-     * @throws Cta4jException if multiple stops are found for the given ID
+     * @throws Cta4jBusException if multiple stops are found for the given ID, or if the API returns an error
+     * response or the response cannot be parsed
      */
     default Optional<Stop> findById(String stopId) {
         Objects.requireNonNull(stopId);
@@ -58,9 +63,9 @@ public interface StopsApi {
         }
 
         if (stops.size() > 1) {
-            String message = String.format("Multiple stops found for ID: %s", stopId);
+            String message = "Multiple stops found for ID: %s".formatted(stopId);
 
-            throw new Cta4jException(message);
+            throw new Cta4jBusException(message, BusApiConstants.STOPS_ENDPOINT);
         }
 
         Stop stop = stops.getFirst();
