@@ -1,7 +1,8 @@
 package com.cta4j.bus.vehicle;
 
+import com.cta4j.bus.common.exception.Cta4jBusException;
+import com.cta4j.bus.common.internal.util.BusApiConstants;
 import com.cta4j.bus.vehicle.model.Vehicle;
-import com.cta4j.exception.Cta4jException;
 import org.jspecify.annotations.NullMarked;
 
 import java.util.Collection;
@@ -23,6 +24,8 @@ public interface VehiclesApi {
      * @return a {@link List} of {@link Vehicle}s corresponding to the provided IDs, or an empty {@link List} if no
      * vehicles are found
      * @throws NullPointerException if {@code ids} is {@code null} or contains {@code null} elements
+     * @throws IllegalArgumentException if more than 10 vehicle IDs are provided
+     * @throws Cta4jBusException if the API returns an error response or the response cannot be parsed
      */
     List<Vehicle> findByIds(Collection<String> ids);
 
@@ -31,9 +34,10 @@ public interface VehiclesApi {
      *
      * @param id the vehicle ID
      * @return an {@link Optional} containing the {@link Vehicle} if found, or an empty {@link Optional} if no vehicle
-     * exists with the given ID
+     * is found for the given ID
      * @throws NullPointerException if {@code id} is {@code null}
-     * @throws Cta4jException if multiple vehicles are found for the given ID
+     * @throws Cta4jBusException if multiple vehicles are found for the given ID, or if the API returns an error
+     * response or the response cannot be parsed
      */
     default Optional<Vehicle> findById(String id) {
         Objects.requireNonNull(id);
@@ -47,13 +51,12 @@ public interface VehiclesApi {
         }
 
         if (vehicles.size() > 1) {
-            String message = String.format(
-                "Expected at most one vehicle for ID: %s, but found %d",
+            String message = "Expected at most one vehicle for ID: %s, but found %d".formatted(
                 id,
                 vehicles.size()
             );
 
-            throw new Cta4jException(message);
+            throw new Cta4jBusException(message, BusApiConstants.VEHICLES_ENDPOINT);
         }
 
         Vehicle vehicle = vehicles.getFirst();
@@ -66,8 +69,10 @@ public interface VehiclesApi {
      *
      * @param routeIds a {@link Collection} of route IDs
      * @return a {@link List} of {@link Vehicle}s associated with the route IDs, or an empty {@link List} if no
-     * vehicles exist for the route IDs
+     * vehicles are found for the route IDs
      * @throws NullPointerException if {@code routeIds} is {@code null} or contains {@code null} elements
+     * @throws IllegalArgumentException if more than 10 route IDs are provided
+     * @throws Cta4jBusException if the API returns an error response or the response cannot be parsed
      */
     List<Vehicle> findByRouteIds(Collection<String> routeIds);
 
@@ -76,8 +81,9 @@ public interface VehiclesApi {
      *
      * @param routeId the route ID
      * @return a {@link List} of {@link Vehicle}s associated with the route ID, or an empty {@link List} if no vehicles
-     * exist for the route ID
+     * are found for the route ID
      * @throws NullPointerException if {@code routeId} is {@code null}
+     * @throws Cta4jBusException if the API returns an error response or the response cannot be parsed
      */
     default List<Vehicle> findByRouteId(String routeId) {
         Objects.requireNonNull(routeId);
